--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,11 @@
-.center {
+body, html {
     height: 100%;
     margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%)
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container {
+    text-align: center;
 }
